--- a/_includes/head/links.html
+++ b/_includes/head/links.html
@@ -4,7 +4,7 @@
 <link rel="alternate" href="{{ page.url | absolute_url }}" hreflang="{{ lang | downcase | replace:'_','-' }}">
 
 <link rel="shortcut icon" href="{{ '/assets/icons/snulogo.ico/favicon-16x16.png' | relative_url }}">
-<link rel="apple-touch-icon" href="{{ '/assets/icons/icon.png' | relative_url }}">
+<link rel="apple-touch-icon" href="{{ '/assets/icons/snulogo.ico/apple-icon.png' | relative_url }}">
 
 <link rel="manifest" href="{{ '/assets/manifest.json' | relative_url }}">
 
