--- a/_includes/head/links.html
+++ b/_includes/head/links.html
@@ -6,7 +6,7 @@
 <link rel="shortcut icon" href="{{ '/assets/icons/snulogo.ico/favicon-16x16.png' | relative_url }}">
 <link rel="apple-touch-icon" href="{{ '/assets/icons/snulogo.ico/apple-icon.png' | relative_url }}">
 
-<link rel="manifest" href="{{ '/assets/manifest.json' | relative_url }}">
+<link rel="manifest" href="{{ '/assets/icons/snulogo.ico/manifest.json' | relative_url }}">
 
 {% unless site.hydejack.no_google_fonts or site.no_google_fonts %}
   <link rel="dns-prefetch" href="https://fonts.googleapis.com">
